# discordpp

./: .gitmodules  CMakeLists.txt  README.md
discordpp/: Rest.hh  Websocket.hh
src/: Rest.cc  Websocket.cc
